--- a/index.html
+++ b/index.html
@@ -4,80 +4,141 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Presenter Showcase</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <nav id="navbar">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#shows">Shows</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <div id="hero">
-            <img src="images/studio-purple-lighting.webp" alt="Hero Image">
+    <!-- Navbar -->
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="images/mic-logo.svg" alt="mic logo">Pat <strong>Kelly</strong></a>
+            <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#shows">Shows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header id="home">
+        <div class="hero d-flex align-items-center justify-content-center">
+            <img src="images/studio-purple-lighting.webp" alt="Hero Image" class="img-fluid">
         </div>
     </header>
 
-    <section id="about">
+    <!-- About Me Section -->
+    <section id="about" class="py-5">
         <div class="container">
-            <div class="about-text">
-                <h2>About Me</h2>
-                <p>Here is some information about the radio presenter, their experience, and background.</p>
-            </div>
-            <div class="about-image">
-                <img src="images/pk-studio2.webp" alt="About Me Image">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <h2>About Me</h2>
+                    <p>Here is some information about the radio presenter, their experience, and background.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/pk-studio2.webp" alt="About Me Image" class="img-fluid rounded">
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- Shows Section -->
     <section id="shows">
-        <div class="container">
+        <div class="hero d-flex align-items-center justify-content-center">
+        <div class="container bg-light">
             <h2>Shows</h2>
-            <div class="shows-grid">
-                <!-- Repeat this card structure for each show -->
-                <div class="show-card">
-                    <img src="show-image-1.jpg" alt="Show Image 1">
-                    <p>Show Title 1</p>
-                    <div class="audio-visualizer">
-                        <!-- Embed your audio player/visualizer here -->
+            <div class="row">
+                <!-- Show 1 -->
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="images/studio-green-lighting.webp" class="card-img-top" alt="green lighting studio image">
+                        <div class="card-body">
+                            <p class="card-text">Show Title 1</p>
+                            <div class="audio-visualizer">
+                                <!-- Embed your audio player/visualizer here -->
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <!-- Add more cards as needed -->
+                <!-- Show 2-->
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="images/vinyl-records.webp" class="card-img-top" alt="vinyl records image">
+                        <div class="card-body">
+                            <p class="card-text">Show Title 2</p>
+                            <div class="audio-visualizer">
+                                <!-- Embed your audio player/visualizer here -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Show 3 -->
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="images/rod.webp" class="card-img-top" alt="rod stewart">
+                        <div class="card-body">
+                            <p class="card-text">Show Title 3</p>
+                            <div class="audio-visualizer">
+                                <!-- Embed your audio player/visualizer here -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <section id="contact">
+    <!-- Contact Section -->
+    <section id="contact" class="py-5 bg-dark text-light">
         <div class="container">
-            <div class="contact-form">
-                <h2>Contact Me</h2>
-                <form>
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" required></textarea>
-
-                    <button type="submit">Send</button>
-                </form>
-            </div>
-            <div class="contact-info">
-                <h2>Get in Touch</h2>
-                <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-                <p>Phone: <a href="tel:+1234567890">+1234567890</a></p>
-                <p>Follow me:</p>
-                <a href="https://facebook.com" target="_blank">Facebook</a>
-                <a href="https://instagram.com" target="_blank">Instagram</a>
+            <div class="row">
+                <div class="col-md-6 py-5">
+                    <h2>Contact Me</h2>
+                    <form>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name:</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message:</label>
+                            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send</button>
+                    </form>
+                </div>
+                <div class="col-md-6 py-5 text-center">
+                    <h2>Get in Touch</h2>
+                    <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+                    <p>Phone: <a href="tel:+1234567890">+1234567890</a></p>
+                    <p>Follow me:</p>
+                    <a href="https://facebook.com" target="_blank" class="btn btn-outline-primary me-2">Facebook</a>
+                    <a href="https://instagram.com" target="_blank" class="btn btn-outline-danger">Instagram</a>
+                </div>
             </div>
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
