--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
     <!-- Hero Section -->
     <header id="home">
         <div class="hero d-flex align-items-center justify-content-center">
-            <img src="images/studio-purple-lighting.webp" alt="Hero Image" class="img-fluid">
+            <img src="" alt="Hero Image" class="img-fluid">
         </div>
     </header>
 
     <!-- About Me Section -->
-    <section id="about" class="py-5">
+    <section id="about" class="py-5 my-3 bg-white">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <h2>About Me</h2>
-                    <p>Here is some information about the radio presenter, their experience, and background.</p>
+                    <img src="images/pk-studio2.webp" alt="About Me Image" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
-                    <img src="images/pk-studio2.webp" alt="About Me Image" class="img-fluid rounded">
+                    <h2>About Me</h2>
+                    <p>Here is some information about the radio presenter, their experience, and background.</p>
                 </div>
             </div>
         </div>
@@ -58,14 +58,14 @@
 
     <!-- Shows Section -->
     <section id="shows">
-        <div class="hero d-flex align-items-center justify-content-center">
-        <div class="container bg-light">
-            <h2>Shows</h2>
+        <div class="show d-flex align-items-center justify-content-center">
+        <div class="container rounded bg-black">
+            <h2 class="text-white text-center py-4">Shows</h2>
             <div class="row">
                 <!-- Show 1 -->
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="images/studio-green-lighting.webp" class="card-img-top" alt="green lighting studio image">
+                        <img src="images/tapes.webp" class="card-img-top" alt="stack of tapes">
                         <div class="card-body">
                             <p class="card-text">Show Title 1</p>
                             <div class="audio-visualizer">
@@ -103,11 +103,11 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-5 bg-dark text-light">
+    <section id="contact" class="py-5 bg-black text-light">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 py-5">
-                    <h2>Contact Me</h2>
+                    <h2>Get in Touch</h2>
                     <form>
                         <div class="mb-3">
                             <label for="name" class="form-label">Name:</label>
@@ -125,10 +125,7 @@
                     </form>
                 </div>
                 <div class="col-md-6 py-5 text-center">
-                    <h2>Get in Touch</h2>
-                    <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-                    <p>Phone: <a href="tel:+1234567890">+1234567890</a></p>
-                    <p>Follow me:</p>
+                    <h2>Follow me:</h2>
                     <a href="https://facebook.com" target="_blank" class="btn btn-outline-primary me-2">Facebook</a>
                     <a href="https://instagram.com" target="_blank" class="btn btn-outline-danger">Instagram</a>
                 </div>
