--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav id="navbar" class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="images/mic-logo.svg" alt="mic logo">Pat <strong>Kelly</strong></a>
             <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,9 +35,10 @@
     </nav>
 
     <!-- Hero Section -->
-    <header id="home">
-        <div class="hero d-flex align-items-center justify-content-center">
-            <img src="" alt="Hero Image" class="img-fluid">
+    <header id="home" class="hero d-flex align-items-center justify-content-center">
+        <div class="hero-content container text-center text-white">
+            <h1>DJ Pat Kelly</h1>
+            <p>Your voice in the Kingdom</p>
         </div>
     </header>
 
@@ -45,11 +46,11 @@
     <section id="about" class="py-5 my-3 bg-white">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6">
-                    <img src="images/pk-studio2.webp" alt="About Me Image" class="img-fluid rounded">
+                <div class="col-md-6 text-center">
+                    <img src="images/about-me.webp" alt="pat kelly picture" class="rounded-circle">
                 </div>
                 <div class="col-md-6">
-                    <h2>About Me</h2>
+                    <h2 class="text-center">About Me</h2>
                     <p>Here is some information about the radio presenter, their experience, and background.</p>
                 </div>
             </div>
@@ -59,42 +60,84 @@
     <!-- Shows Section -->
     <section id="shows">
         <div class="show d-flex align-items-center justify-content-center">
-        <div class="container rounded bg-black">
+        <div class="container show-container">
             <h2 class="text-white text-center py-4">Shows</h2>
             <div class="row">
                 <!-- Show 1 -->
-                <div class="col-md-4">
+                <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <img src="images/tapes.webp" class="card-img-top" alt="stack of tapes">
-                        <div class="card-body">
-                            <p class="card-text">Show Title 1</p>
-                            <div class="audio-visualizer">
-                                <!-- Embed your audio player/visualizer here -->
-                            </div>
+                        <div class="card-img-container">
+                            <img src="images/pk-studio2.webp" class="card-img-top" alt="pat in studio">
+                        </div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Recording1.mp4" type="video/mp4">
+                            </video>
                         </div>
                     </div>
                 </div>
                 <!-- Show 2-->
-                <div class="col-md-4">
+                <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <img src="images/vinyl-records.webp" class="card-img-top" alt="vinyl records image">
-                        <div class="card-body">
-                            <p class="card-text">Show Title 2</p>
-                            <div class="audio-visualizer">
-                                <!-- Embed your audio player/visualizer here -->
-                            </div>
+                        <div class="card-img-container">
+                            <img src="images/headphones-desk.webp" class="card-img-top" alt="headphones on desk">
+                        </div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Recording1.mp4" type="video/mp4">
+                            </video>
                         </div>
                     </div>
                 </div>
                 <!-- Show 3 -->
-                <div class="col-md-4">
+                <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <img src="images/rod.webp" class="card-img-top" alt="rod stewart">
-                        <div class="card-body">
-                            <p class="card-text">Show Title 3</p>
-                            <div class="audio-visualizer">
-                                <!-- Embed your audio player/visualizer here -->
-                            </div>
+                        <div class="card-img-container">
+                            <img src="images/tapes.webp" class="card-img-top" alt="stack of tapes">
+                        </div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Recording1.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                <!-- Show 4 -->
+                <div class="col-md-4 p-4">
+                    <div class="card mb-4">
+                        <div class="card-img-container">
+                            <img src="images/rockandroll.webp" class="card-img-top" alt="man playing drums">
+                        </div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Recording1.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                <!-- Show 5 -->
+                <div class="col-md-4 p-4">
+                    <div class="card mb-4">
+                        <div class="card-img-container">
+                            <img src="images/rod.webp" class="card-img-top" alt="pat with rod stewart">
+                        </div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Recording1.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                <!-- Show 6 -->
+                <div class="col-md-4 p-4">
+                    <div class="card mb-4">
+                        <div class="card-img-container">
+                            <img src="images/vinyl-records.webp" class="card-img-top" alt="case of vinyls">
+                        </div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Recording1.mp4" type="video/mp4">
+                            </video>
                         </div>
                     </div>
                 </div>
