--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Radio Presenter Showcase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
@@ -37,30 +40,30 @@
     <!-- Hero Section -->
     <header id="home" class="hero d-flex align-items-center justify-content-center">
         <div class="hero-content container text-center text-white">
-            <h1>DJ Pat Kelly</h1>
-            <p>Your voice in the Kingdom</p>
+            <h1 class="pb-3">DJ Pat Kelly</h1>
+            <h3>Your voice in the Kingdom</h3>
         </div>
     </header>
 
     <!-- About Me Section -->
-    <section id="about" class="py-5 my-3 bg-white">
-        <div class="container">
+    <section id="about" class="py-5 bg-white">
+        <div class="container py-4">
             <div class="row align-items-center">
                 <div class="col-md-6 text-center">
                     <img src="images/about-me.webp" alt="pat kelly picture" class="rounded-circle">
                 </div>
                 <div class="col-md-6">
-                    <h2 class="text-center">About Me</h2>
-                    <p>Here is some information about the radio presenter, their experience, and background.</p>
+                    <h2 class="text-center pb-3">About Me</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula dui sit amet lacus laoreet, sed malesuada erat consequat. Curabitur a purus a ligula cursus dictum. Integer euismod, sapien eget vehicula auctor, urna nulla vehicula augue, et pellentesque justo ipsum vel libero. Aliquam erat volutpat. Sed sit amet turpis in odio suscipit viverra. Suspendisse potenti. Nulla facilisi. In ultricies varius urna, in imperdiet mauris sagittis sit amet.</p>
+                    <p>Phasellus euismod magna ac lorem condimentum, vel gravida ipsum ultrices. Integer scelerisque nibh et arcu iaculis, eget varius elit faucibus. Donec maximus, purus vel elementum efficitur, felis dolor tincidunt augue, nec ullamcorper ante ipsum a velit. Sed suscipit cursus orci, ac sodales risus consequat nec. In et eros magna. Maecenas congue nulla id velit malesuada, vel tempor mi feugiat. Mauris interdum, erat nec varius varius, elit turpis varius nisl, et consequat metus ex in libero.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Shows Section -->
-    <section id="shows">
-        <div class="show d-flex align-items-center justify-content-center">
-        <div class="container show-container">
+   <!-- Shows Section -->
+    <section id="shows" class="py-5">
+        <div class="container">
             <h2 class="text-white text-center py-4">Shows</h2>
             <div class="row">
                 <!-- Show 1 -->
@@ -71,12 +74,12 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/Recording1.mp4" type="video/mp4">
+                                <source src="audio/Recording2.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
                 </div>
-                <!-- Show 2-->
+                <!-- Show 2 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container">
@@ -84,7 +87,7 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/Recording1.mp4" type="video/mp4">
+                                <source src="audio/Recording2.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -97,7 +100,7 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/Recording1.mp4" type="video/mp4">
+                                <source src="audio/Recording2.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -110,7 +113,7 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/Recording1.mp4" type="video/mp4">
+                                <source src="audio/Recording2.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -123,7 +126,7 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/Recording1.mp4" type="video/mp4">
+                                <source src="audio/Recording2.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -136,7 +139,7 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/Recording1.mp4" type="video/mp4">
+                                <source src="audio/Recording2.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -146,10 +149,10 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-5 bg-black text-light">
+    <section id="contact" class="py-5 bg-white">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6 py-5">
+            <div class="row align-items-center">
+                <div class="col-md-6 py-5 text-center">
                     <h2>Get in Touch</h2>
                     <form>
                         <div class="mb-3">
@@ -164,17 +167,23 @@
                             <label for="message" class="form-label">Message:</label>
                             <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Send</button>
+                        <button type="submit" class="btn btn-warning">Send</button>
                     </form>
                 </div>
                 <div class="col-md-6 py-5 text-center">
-                    <h2>Follow me:</h2>
-                    <a href="https://facebook.com" target="_blank" class="btn btn-outline-primary me-2">Facebook</a>
-                    <a href="https://instagram.com" target="_blank" class="btn btn-outline-danger">Instagram</a>
+                    <img src="images/mic-purple-background.webp" class="rounded-circle purple-mic">
                 </div>
             </div>
         </div>
     </section>
+    <footer class="bg-black">
+        <div class="py-3 justify-content-center align-items-center d-flex">
+            <p class="mx-5 text-white">&copyPatKelly2024</p>
+            <p class="mx-2 text-white">Follow: </p>
+            <a href="https://facebook.com" target="_blank" class="">Facebook</a>
+            <a href="https://instagram.com" target="_blank" class="">Instagram</a>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
