--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header id="home" class="hero d-flex align-items-center justify-content-center">
         <div class="hero-content container text-center text-white">
             <h1 class="pb-3">DJ Pat Kelly</h1>
-            <h3>Your voice in the Kingdom</h3>
+            <h3>Feel the Music, Feel Alive</h3>
         </div>
     </header>
 
@@ -135,7 +135,7 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container">
-                            <img src="images/vinyl-records.webp" class="card-img-top" alt="case of vinyls">
+                            <img src="images/Norma-Foley.webp" class="card-img-top" alt="case of vinyls">
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
@@ -151,8 +151,8 @@
     <!-- Contact Section -->
     <section id="contact" class="py-5 bg-white">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 py-5 text-center">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-6 py-5 text-center contact-form">
                     <h2>Get in Touch</h2>
                     <form>
                         <div class="mb-3">
@@ -171,23 +171,25 @@
                     </form>
                 </div>
                 <div class="col-md-6 py-5 text-center">
-                    <img src="images/mic-purple-background.webp" class="rounded-circle purple-mic">
+                    <img src="images/pk-studio1.webp" class="rounded-circle contact-img">
                 </div>
             </div>
         </div>
     </section>
-    <footer class="bg-black">
-        <div class="py-3 justify-content-center align-items-center d-flex">
-            <p class="mx-5 text-white">&copyPatKelly2024</p>
-            <p class="mx-2 text-white">Follow: </p>
-            <a href="https://facebook.com" target="_blank" class="">Facebook</a>
-            <a href="https://instagram.com" target="_blank" class="">Instagram</a>
+    <footer class="bg-black py-3">
+        <div class="justify-content-center align-items-center d-flex">
+            <p class="mx-4 text-white"><i>&copyPatKelly2024</i></p>
+            <a href="https://facebook.com" target="_blank" class="social-icon">
+                <i class="fa-brands fa-square-facebook mx-2"></i></a>
+            <a href="https://instagram.com" target="_blank" class="social-icon">
+                <i class="fa-brands fa-instagram mx-2"></i></a>
         </div>
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/272b49c3d2.js" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
