--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radio Presenter Showcase</title>
+    <title>Radio Showcase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="images/mic-logo.svg" alt="mic logo">Pat <strong>Kelly</strong></a>
+            <a class="navbar-brand" href="#"><img src="images/mic-logo.svg" alt="mic logo">Pat Kelly</a>
             <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -69,8 +69,11 @@
                 <!-- Show 1 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <div class="card-img-container">
+                        <div class="card-img-container position-relative">
                             <img src="images/pk-studio2.webp" class="card-img-top" alt="pat in studio">
+                            <div class="card-overlay">
+                                <div>The big countdown to Christmas is on we discuss the top xmas hits of the 00s</div>
+                            </div>
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
@@ -82,8 +85,11 @@
                 <!-- Show 2 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <div class="card-img-container">
-                            <img src="images/headphones-desk.webp" class="card-img-top" alt="headphones on desk">
+                        <div class="card-img-container position-relative">
+                            <img src="images/Norma-Foley.webp" class="card-img-top" alt="norma foley">
+                            <div class="card-overlay">
+                                <div>Minister for Education Norma Foley talks about the new Leaving Cert format</div>
+                            </div>
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
@@ -95,8 +101,11 @@
                 <!-- Show 3 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <div class="card-img-container">
-                            <img src="images/tapes.webp" class="card-img-top" alt="stack of tapes">
+                        <div class="card-img-container position-relative">
+                            <img src="images/man-guitar.webp" class="card-img-top" alt="man playing guitar">
+                            <div class="card-overlay">
+                                <div>A discussion on country music in Ireland with Bob Traynor</div>
+                            </div>
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
@@ -108,8 +117,11 @@
                 <!-- Show 4 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <div class="card-img-container">
+                        <div class="card-img-container position-relative">
                             <img src="images/rockandroll.webp" class="card-img-top" alt="man playing drums">
+                            <div class="card-overlay">
+                                <div>A deep dive in to Ireland's Rock and Roll history and Irish music legends</div>
+                            </div>
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
@@ -121,8 +133,11 @@
                 <!-- Show 5 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <div class="card-img-container">
+                        <div class="card-img-container position-relative">
                             <img src="images/rod.webp" class="card-img-top" alt="pat with rod stewart">
+                            <div class="card-overlay">
+                                <div>Presenting Rod Stewart, we discuss how he became one of the best-selling music artists of all time</div>
+                            </div>
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
@@ -134,8 +149,11 @@
                 <!-- Show 6 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
-                        <div class="card-img-container">
-                            <img src="images/Norma-Foley.webp" class="card-img-top" alt="case of vinyls">
+                        <div class="card-img-container position-relative">
+                            <img src="images/woman.webp" class="card-img-top" alt="woman wearing headphones">
+                            <div class="card-overlay">
+                                <div>A discussion with Kerry's own Aoife Dillane on this year's Ladies football success</div>
+                            </div>
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
@@ -178,7 +196,6 @@
     </section>
     <footer class="bg-black py-3">
         <div class="justify-content-center align-items-center d-flex">
-            <p class="mx-4 text-white"><i>&copyPatKelly2024</i></p>
             <a href="https://facebook.com" target="_blank" class="social-icon">
                 <i class="fa-brands fa-square-facebook mx-2"></i></a>
             <a href="https://instagram.com" target="_blank" class="social-icon">
@@ -186,7 +203,6 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/272b49c3d2.js" crossorigin="anonymous"></script>
