update Norma's interview

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/SSOCT2217 Norma Foley Finish.mp3" type="video/mp3">
+                                <source src="audio/Norma.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
