update text on radio show

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="card-img-container position-relative">
                             <img src="images/Norma-Foley.webp" class="card-img-top" alt="norma foley">
                             <div class="card-overlay">
-                                <div>Minister for Education Norma Foley talks about the new Leaving Cert format</div>
+                                <div>Minister for Education Norma Foley talks about some of her favourtite sentimental songs</div>
                             </div>
                         </div>
                         <div class="audio-visualizer">
