update shows card images

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/pk-studio2.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>The big countdown to Christmas is on we discuss the top xmas hits of the 00s</div>
                             </div>
@@ -86,7 +86,7 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/Norma-Foley.webp" class="card-img-top" alt="norma foley">
+                            <img src="images/ChatsNorma.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Minister for Education Norma Foley talks about some of her favourtite sentimental songs</div>
                             </div>
@@ -102,7 +102,7 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/man-guitar.webp" class="card-img-top" alt="man playing guitar">
+                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>A discussion on country music in Ireland with Bob Traynor</div>
                             </div>
@@ -118,7 +118,7 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/rockandroll.webp" class="card-img-top" alt="man playing drums">
+                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>A deep dive in to Ireland's Rock and Roll history and Irish music legends</div>
                             </div>
@@ -134,7 +134,7 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/rod.webp" class="card-img-top" alt="pat with rod stewart">
+                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Presenting Rod Stewart, we discuss how he became one of the best-selling music artists of all time</div>
                             </div>
@@ -150,7 +150,7 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/woman.webp" class="card-img-top" alt="woman wearing headphones">
+                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>A discussion with Kerry's own Aoife Dillane on this year's Ladies football success</div>
                             </div>
