add audio for derek rusk show

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/ChatsDerek.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
-                                <div>The big countdown to Christmas is on we discuss the top xmas hits of the 00s</div>
+                                <div>Listen in as Derek Rusk talks about his top song choices</div>
                             </div>
                         </div>
                         <div class="audio-visualizer">
