--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/Recording2.mp4" type="video/mp4">
+                                <source src="audio/Derek.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
