update shows with new images and audio

--- a/index.html
+++ b/index.html
@@ -70,80 +70,60 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/ChatsDerek.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/PatsChatsDerek.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
-                                <div>Listen in as Derek Rusk talks about his top song choices</div>
+                                <div>Derek Rusk talks about his song choices</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer">
-                            <video controls>
-                                <source src="audio/Derek.mp4" type="video/mp4">
-                            </video>
-                        </div>
+                        <div class="audio-visualizer" id="waveform1"></div>
                     </div>
                 </div>
                 <!-- Show 2 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/ChatsNorma.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/PatsChatsNorma.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
-                                <div>Minister for Education Norma Foley talks about some of her favourtite sentimental songs</div>
+                                <div>Minister for Education Norma Foley talks about some of her favourtite songs</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer">
-                            <video controls>
-                                <source src="audio/Norma.mp4" type="video/mp4">
-                            </video>
-                        </div>
+                        <div class="audio-visualizer" id="waveform2"></div>
                     </div>
                 </div>
                 <!-- Show 3 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/PatsChatsGary.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
-                                <div>A discussion on country music in Ireland with Bob Traynor</div>
+                                <div>Gary O Donnell talks to Pat about meeting Cliff Richard and Joe Dolan in South Africa and a great night spent with Ronnie Drew and the Dubliners in Glenbeigh</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer">
-                            <video controls>
-                                <source src="audio/Recording2.mp4" type="video/mp4">
-                            </video>
-                        </div>
+                        <div class="audio-visualizer" id="waveform3"></div>
                     </div>
                 </div>
                 <!-- Show 4 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/PatsChatsEd.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
-                                <div>A deep dive in to Ireland's Rock and Roll history and Irish music legends</div>
+                                <div>Ed Kelliher talks Music and Business with Pat. He shares his memories of Simon and Garfunkel, Tommy Makem and Cat Stevens</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer">
-                            <video controls>
-                                <source src="audio/Recording2.mp4" type="video/mp4">
-                            </video>
-                        </div>
+                        <div class="audio-visualizer" id="waveform4"></div>
                     </div>
                 </div>
                 <!-- Show 5 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/PatsChatsGer.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
-                                <div>Presenting Rod Stewart, we discuss how he became one of the best-selling music artists of all time</div>
+                                <div>Ger Carmody shares his Music Memories with Pat which include The Hothouse Flowers, The Housemartins, the Violent Femmes and U2</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer">
-                            <video controls>
-                                <source src="audio/Recording2.mp4" type="video/mp4">
-                            </video>
-                        </div>
+                        <div class="audio-visualizer" id="waveform5"></div>
                     </div>
                 </div>
                 <!-- Show 6 -->
@@ -152,14 +132,10 @@
                         <div class="card-img-container position-relative">
                             <img src="images/PatsChats.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
-                                <div>A discussion with Kerry's own Aoife Dillane on this year's Ladies football success</div>
+                                <div>text....</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer">
-                            <video controls>
-                                <source src="audio/Recording2.mp4" type="video/mp4">
-                            </video>
-                        </div>
+                        <div class="audio-visualizer" id="waveform6"></div>
                     </div>
                 </div>
             </div>
