update audio and images

--- a/index.html
+++ b/index.html
@@ -70,60 +70,80 @@
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChatsDerek.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/derekshow.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Derek Rusk talks about his song choices</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer" id="waveform1"></div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Derek.mp4" type="video/mp4">
+                            </video>
+                        </div>
                     </div>
                 </div>
                 <!-- Show 2 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChatsNorma.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/normashow.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Minister for Education Norma Foley talks about some of her favourtite songs</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer" id="waveform2"></div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Norma.mp4" type="video/mp4">
+                            </video>
+                        </div>
                     </div>
                 </div>
                 <!-- Show 3 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChatsGary.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/garyshow.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Gary O Donnell talks to Pat about meeting Cliff Richard and Joe Dolan in South Africa and a great night spent with Ronnie Drew and the Dubliners in Glenbeigh</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer" id="waveform3"></div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Gary.mp4" type="video/mp4">
+                            </video>
+                        </div>
                     </div>
                 </div>
                 <!-- Show 4 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChatsEd.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/edshow.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Ed Kelliher talks Music and Business with Pat. He shares his memories of Simon and Garfunkel, Tommy Makem and Cat Stevens</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer" id="waveform4"></div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Ed.mp4" type="video/mp4">
+                            </video>
+                        </div>
                     </div>
                 </div>
                 <!-- Show 5 -->
                 <div class="col-md-4 p-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/PatsChatsGer.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/gershow.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Ger Carmody shares his Music Memories with Pat which include The Hothouse Flowers, The Housemartins, the Violent Femmes and U2</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer" id="waveform5"></div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Ger.mp4" type="video/mp4">
+                            </video>
+                        </div>
                     </div>
                 </div>
                 <!-- Show 6 -->
@@ -135,7 +155,11 @@
                                 <div>text....</div>
                             </div>
                         </div>
-                        <div class="audio-visualizer" id="waveform6"></div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/Derek.mp4" type="video/mp4">
+                            </video>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -179,7 +203,6 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/wavesurfer.js@7/dist/wavesurfer.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/272b49c3d2.js" crossorigin="anonymous"></script>
