add john mac's audio

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         </div>
                         <div class="audio-visualizer">
                             <video controls>
-                                <source src="audio/Derek.mp4" type="video/mp4">
+                                <source src="audio/JohnMac.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
