add John D show

--- a/index.html
+++ b/index.html
@@ -162,6 +162,22 @@
                         </div>
                     </div>
                 </div>
+                <!-- Show 7 -->
+                <div class="show col-md-4 py-4">
+                    <div class="card mb-4">
+                        <div class="card-img-container position-relative">
+                            <img src="images/johndshow.webp" class="card-img-top" alt="pat in studio">
+                            <div class="card-overlay">
+                                <div>John Drummey tells Pat why his song choices are the soundtrack to Family life, his dreams of becoming a sports commentator and returning to college as a mature student</div>
+                            </div>
+                        </div>
+                        <div class="audio-visualizer">
+                            <video controls>
+                                <source src="audio/JohnD.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
