update show images

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/normashow.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/withNormaFoley.png" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Minister for Education Norma Foley talks about some of her favourtite songs</div>
                             </div>
@@ -102,7 +102,7 @@
                 <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/garyshow.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/garyodonnell_show.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Gary O Donnell talks to Pat about meeting Cliff Richard and Joe Dolan in South Africa and a great night spent with Ronnie Drew and the Dubliners in Glenbeigh</div>
                             </div>
@@ -118,7 +118,7 @@
                 <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/edshow.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/withEdKelliher.png" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Ed Kelliher talks Music and Business with Pat. He shares his memories of Simon and Garfunkel, Tommy Makem and Cat Stevens</div>
                             </div>
@@ -134,7 +134,7 @@
                 <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/gershow.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/withGerCarmody.png" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>Ger Carmody shares his Music Memories with Pat which include The Hothouse Flowers, The Housemartins, the Violent Femmes and U2</div>
                             </div>
@@ -150,7 +150,7 @@
                 <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/johnmacshow.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/withJohnMac.png" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>John Mac remembers Live Aid, The Bay City, and the night Def Leppard played in Ballybunion</div>
                             </div>
@@ -166,7 +166,7 @@
                 <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
-                            <img src="images/johndshow.webp" class="card-img-top" alt="pat in studio">
+                            <img src="images/johndrummey_show.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
                                 <div>John Drummey tells Pat why his song choices are the soundtrack to Family life, his dreams of becoming a sports commentator and returning to college as a mature student</div>
                             </div>
